<resources>
    <string name="app_name">Clone Santander</string>
    <string name="saldo_disponivel">Saldo Disponível</string>
    <string name="txt_saldo_limite">Saldo + Limite:</string>
    <string name="valor_saldo_limite">R$ 2.200,00</string>
    <string name="txt_ver_extrato">Ver Extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_recarregar">Recarregar</string>
    <string name="txt_cartao_final">Cartão Final</string>
    <string name="valor_cartao_final">0033</string>
</resources>