<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_banco_santander_logo" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá,Jéssica"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvAgencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag 2030"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario"
        app:layout_constraintStart_toStartOf="@+id/tvUsuario"
        />

    <TextView
        android:id="@+id/tvConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CC 0122112-5"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/tvAgencia"
        app:layout_constraintStart_toEndOf="@+id/tvAgencia"
        />

    //CARD PRINCIPAL
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardConta"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAgencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tvTxtSaldoDisponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo_disponivel"
                android:layout_marginLeft="16dp"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@+id/ivSaldo"
                app:layout_constraintLeft_toRightOf="@+id/ivSaldo"
                app:layout_constraintBottom_toBottomOf="@+id/ivSaldo"
                />

            <ImageView
                android:id="@+id/ivUp"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_less_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tvSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 1.200,00"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/ivSaldo"
                app:layout_constraintTop_toBottomOf="@+id/tvTxtSaldoDisponivel"/>

            <TextView
                android:id="@+id/tvSaldoLimite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saldo_limite"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSaldo"
                app:layout_constraintStart_toStartOf="@+id/tvSaldo" />

            <TextView
                android:id="@+id/tvValorLimite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tvSaldoLimite"
                app:layout_constraintTop_toTopOf="@+id/tvSaldoLimite"
                android:layout_marginStart="8dp"
                android:text="@string/valor_saldo_limite" />

            <View
                android:id="@+id/vDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/tvSaldoLimite"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/tvVerExtrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ver_extrato"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/redSecondary"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    //CARD PAGAR

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPagar"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_margin="16dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardConta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintBottom_toBottomOf="@id/tvPagar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pagar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPagar" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    //CARD TRANSFERIR
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTranferir"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_margin="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/cardConta"
        app:layout_constraintStart_toEndOf="@+id/cardPagar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivTranferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black_24dp"
                app:layout_constraintBottom_toBottomOf="@id/tvTranferir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTranferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_transferir"
                app:layout_constraintTop_toBottomOf="@+id/ivTranferir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    //CARD RECARREGAR
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardRecarregar"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_margin="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/cardConta"
        app:layout_constraintStart_toEndOf="@id/cardTranferir">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivRecarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stay_primary_portrait_black_24dp"
                app:layout_constraintBottom_toBottomOf="@id/tvRecarregar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRecarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_recarregar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivRecarregar" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <ImageView
        android:id="@+id/ivCartaoFinal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@+id/cardPagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvCartaoFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cartao_final"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/ivCartaoFinal"
        app:layout_constraintStart_toStartOf="@+id/ivCartaoFinal"
        app:layout_constraintBottom_toBottomOf="@+id/ivCartaoFinal"
        />

    <TextView
        android:id="@+id/tvValorCartaoFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_cartao_final"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/ivCartaoFinal"
        app:layout_constraintStart_toEndOf="@+id/tvCartaoFinal"
        app:layout_constraintBottom_toBottomOf="@+id/ivCartaoFinal"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_black_24dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivCartaoFinal"
        app:layout_constraintTop_toTopOf="@+id/ivCartaoFinal"
        app:layout_constraintEnd_toEndOf="@+id/ivCartaoFinal"/>



</androidx.constraintlayout.widget.ConstraintLayout>